TP #37180: Add OneBalance promo to dashboard bar

--- a/Code/ShipWorks/ShipWorks.Core.csproj
+++ b/Code/ShipWorks/ShipWorks.Core.csproj
@@ -808,6 +808,7 @@
     <Compile Include="ApplicationCore\Crashes\ServiceCrash.cs" />
     <Compile Include="ApplicationCore\Crashes\SubmissionDetails.cs" />
     <Compile Include="ApplicationCore\Dashboard\Content\DashboardLicenseItem.cs" />
+    <Compile Include="ApplicationCore\Dashboard\Content\DashboardOneBalancePromoItem.cs" />
     <Compile Include="ApplicationCore\Dashboard\Content\DashboardSchedulerServiceStoppedItem.cs" />
     <Compile Include="ApplicationCore\Dashboard\Content\DashboardStoreItem.cs" />
     <Compile Include="ApplicationCore\Dashboard\Content\IUpgradeResultsChecker.cs" />
