TP#36586: Add Create New button to Scan to Ship Shipping Ribbon. In the ShipmentGridControl change Create New and Copy to New Shipment and Ship Again. Change Ship Again Icon in ShipmentGridControl to use the same icon used in the Shipping Ribbon. Fix bug where Ship Again button would still be enabled in Scan to Ship Shipping Ribbon after clicking reset.

--- a/Code/ShipWorks.OrderLookup/ShipWorks.OrderLookup.csproj
+++ b/Code/ShipWorks.OrderLookup/ShipWorks.OrderLookup.csproj
@@ -327,6 +327,7 @@
     <Compile Include="Layout\OrderLookupLayoutDefaults.cs" />
     <Compile Include="Layout\PanelInfo.cs" />
     <Compile Include="Messages\OrderLookupShipAgainMessage.cs" />
+    <Compile Include="Messages\ScanToShipCreateShipmentMessage.cs" />
     <Compile Include="Messages\ScanToShipShipmentLoadedMessage.cs" />
     <Compile Include="OrderLookupConfirmationService.cs" />
     <Compile Include="OrderLookupOrderIDRetriever.cs" />
