--- a/Code/Interapptive.Shared.Tests/Interapptive.Shared.Tests.csproj
+++ b/Code/Interapptive.Shared.Tests/Interapptive.Shared.Tests.csproj
@@ -159,6 +159,8 @@
     <Compile Include="Utility\StreamUtilityTest.cs" />
     <Compile Include="Utility\TelemetricResultTest.cs" />
     <Compile Include="Utility\HtmlEntityUtilityTest.cs" />
+    <Compile Include="Win32\RegistryHelperTest.cs" />
+    <Compile Include="Win32\User32InputTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Interapptive.Shared\Interapptive.Shared.csproj">
@@ -203,6 +205,7 @@
     <Analyzer Include="..\..\packages\SonarAnalyzer.CSharp.6.8.1.4648\analyzers\SonarAnalyzer.dll" />
     <Analyzer Include="..\..\packages\xunit.analyzers.0.10.0\analyzers\dotnet\cs\xunit.analyzers.dll" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
