--- a/Code/ShipWorks.Data.Model/ShipWorks.Data.Model.csproj
+++ b/Code/ShipWorks.Data.Model/ShipWorks.Data.Model.csproj
@@ -204,6 +204,7 @@
     <Compile Include="Custom\EntityClasses\ProductListItemEntity.cs" />
     <Compile Include="Custom\EntityClasses\ProductListItemEntity.ReadOnly.cs" />
     <Compile Include="Custom\EntityClasses\ProductListItemEntity.Interface.cs" />
+    <Compile Include="Custom\EntityClasses\ProductEntity.cs" />
     <Compile Include="Custom\EntityClasses\ProductVariantEntity.cs" />
     <Compile Include="Custom\EntityClasses\ProductVariantEntity.Interface.cs" />
     <Compile Include="Custom\EntityClasses\ProductVariantEntity.ReadOnly.cs" />
