--- a/Code/ShipWorks/ShipWorks.Core.csproj
+++ b/Code/ShipWorks/ShipWorks.Core.csproj
@@ -791,6 +791,7 @@
     <Compile Include="Api\Configuration\ApiSettings.cs" />
     <Compile Include="Api\Configuration\IApiSettingsRepository.cs" />
     <Compile Include="Api\IApiPortRegistrationService.cs" />
+    <Compile Include="Api\IApiService.cs" />
     <Compile Include="ApplicationCore\CommandLineOptions\AutoUpgradeFailureSubmitter.cs" />
     <Compile Include="ApplicationCore\CommandLineOptions\GetUpdateWindowCommandLineOption.cs" />
     <Compile Include="ApplicationCore\CommandLineOptions\GetUpgradeLockCommandLineOption.cs" />
@@ -886,6 +887,8 @@
     <Compile Include="ApplicationCore\Nudges\INudgeManager.cs" />
     <Compile Include="ApplicationCore\Nudges\NullNudgeManager.cs" />
     <Compile Include="ApplicationCore\Nudges\NudgeManagerWrapper.cs" />
+    <Compile Include="ApplicationCore\Settings\Api\ApiSettingsViewModel.cs" />
+    <Compile Include="ApplicationCore\Settings\Api\IApiSettingsPage.cs" />
     <Compile Include="ApplicationCore\Settings\AutoUpdateSettings.cs" />
     <Compile Include="ApplicationCore\Settings\ISettingsPage.cs" />
     <Compile Include="ApplicationCore\Settings\Warehouse\IWarehouseListDialog.cs" />
