TP #37533: Add FedEx Telemetry Mutator

--- a/Code/ShipWorks.Shipping/ShipWorks.Shipping.csproj
+++ b/Code/ShipWorks.Shipping/ShipWorks.Shipping.csproj
@@ -599,6 +599,7 @@
     <Compile Include="Services\ShippingManagerWrapper.cs" />
     <Compile Include="Services\ShippingProfileManagerWrapper.cs" />
     <Compile Include="Services\Telemetry\EndiciaTelemetryMutator.cs" />
+    <Compile Include="Services\Telemetry\FedexTelemetryMutator.cs" />
     <Compile Include="Services\Telemetry\ICarrierTelemetryMutator.cs" />
     <Compile Include="Services\Telemetry\PostalTelemetryMutator.cs" />
     <Compile Include="Services\Telemetry\UpsTelemetryMutator.cs" />
