TP #37533: add OnTrac mutator

--- a/Code/ShipWorks.Shipping/ShipWorks.Shipping.csproj
+++ b/Code/ShipWorks.Shipping/ShipWorks.Shipping.csproj
@@ -601,6 +601,7 @@
     <Compile Include="Services\Telemetry\EndiciaTelemetryMutator.cs" />
     <Compile Include="Services\Telemetry\FedexTelemetryMutator.cs" />
     <Compile Include="Services\Telemetry\ICarrierTelemetryMutator.cs" />
+    <Compile Include="Services\Telemetry\OnTracTelemetryMutator.cs" />
     <Compile Include="Services\Telemetry\PostalTelemetryMutator.cs" />
     <Compile Include="Services\Telemetry\UpsTelemetryMutator.cs" />
     <Compile Include="Services\Telemetry\UspsTelemetryMutator.cs" />
