--- a/Code/ShipWorks.Shipping/ShipWorks.Shipping.csproj
+++ b/Code/ShipWorks.Shipping/ShipWorks.Shipping.csproj
@@ -603,6 +603,7 @@
     <Compile Include="Services\Telemetry\EndiciaTelemetryMutator.cs" />
     <Compile Include="Services\Telemetry\FedexTelemetryMutator.cs" />
     <Compile Include="Services\Telemetry\ICarrierTelemetryMutator.cs" />
+    <Compile Include="Services\Telemetry\iParcelTelemetryMutator.cs" />
     <Compile Include="Services\Telemetry\OnTracTelemetryMutator.cs" />
     <Compile Include="Services\Telemetry\PostalTelemetryMutator.cs" />
     <Compile Include="Services\Telemetry\UpsTelemetryMutator.cs" />
