--- a/Code/ShipWorks.Shipping/ShipWorks.Shipping.csproj
+++ b/Code/ShipWorks.Shipping/ShipWorks.Shipping.csproj
@@ -598,6 +598,7 @@
     <Compile Include="Services\Dialogs\ShippingDialogService.cs" />
     <Compile Include="Services\ShippingManagerWrapper.cs" />
     <Compile Include="Services\ShippingProfileManagerWrapper.cs" />
+    <Compile Include="Services\Telemetry\AmazonSFPTelemetryMutator.cs" />
     <Compile Include="Services\Telemetry\AmazonSWATelemetryMutator.cs" />
     <Compile Include="Services\Telemetry\AsendiaTelemetryMutator.cs" />
     <Compile Include="Services\Telemetry\EndiciaTelemetryMutator.cs" />
