--- a/Code/ShipWorks.Shipping.Tests/ShipWorks.Shipping.Tests.csproj
+++ b/Code/ShipWorks.Shipping.Tests/ShipWorks.Shipping.Tests.csproj
@@ -417,6 +417,7 @@
     <Compile Include="Services\EditableShippingProfileRepositoryTest.cs" />
     <Compile Include="Services\ShippingProfileServiceTest.cs" />
     <Compile Include="Services\Telemetry\AsendiaTelemetryMutatorTest.cs" />
+    <Compile Include="Services\Telemetry\UpsTelemetryMutatorTest.cs" />
     <Compile Include="ShipEngine\ShipEngineApiKeyTest.cs" />
     <Compile Include="Settings\ShipmentDateCutoffTest.cs" />
     <Compile Include="ShipEngine\ShipEngineTrackingResultFactoryTest.cs" />
