--- a/Code/ShipWorks.Shipping.Tests/ShipWorks.Shipping.Tests.csproj
+++ b/Code/ShipWorks.Shipping.Tests/ShipWorks.Shipping.Tests.csproj
@@ -417,7 +417,10 @@
     <Compile Include="Services\EditableShippingProfileRepositoryTest.cs" />
     <Compile Include="Services\ShippingProfileServiceTest.cs" />
     <Compile Include="Services\Telemetry\AsendiaTelemetryMutatorTest.cs" />
+    <Compile Include="Services\Telemetry\EndiciaTelemetryMutatorTest.cs" />
+    <Compile Include="Services\Telemetry\PostalTelemetryMutatorTest.cs" />
     <Compile Include="Services\Telemetry\UpsTelemetryMutatorTest.cs" />
+    <Compile Include="Services\Telemetry\UspsTelemetryMutatorTest.cs" />
     <Compile Include="ShipEngine\ShipEngineApiKeyTest.cs" />
     <Compile Include="Settings\ShipmentDateCutoffTest.cs" />
     <Compile Include="ShipEngine\ShipEngineTrackingResultFactoryTest.cs" />
