--- a/Code/ShipWorks.Shipping.Tests/ShipWorks.Shipping.Tests.csproj
+++ b/Code/ShipWorks.Shipping.Tests/ShipWorks.Shipping.Tests.csproj
@@ -418,6 +418,7 @@
     <Compile Include="Services\ShippingProfileServiceTest.cs" />
     <Compile Include="Services\Telemetry\AsendiaTelemetryMutatorTest.cs" />
     <Compile Include="Services\Telemetry\EndiciaTelemetryMutatorTest.cs" />
+    <Compile Include="Services\Telemetry\OnTracTelemetryMutatorTest.cs" />
     <Compile Include="Services\Telemetry\PostalTelemetryMutatorTest.cs" />
     <Compile Include="Services\Telemetry\UpsTelemetryMutatorTest.cs" />
     <Compile Include="Services\Telemetry\UspsTelemetryMutatorTest.cs" />
