--- a/Code/ShipWorks.UI/ShipWorks.UI.csproj
+++ b/Code/ShipWorks.UI/ShipWorks.UI.csproj
@@ -222,6 +222,7 @@
     <Compile Include="Controls\Settings\Api\ApiSettingsHost.Designer.cs">
       <DependentUpon>ApiSettingsHost.cs</DependentUpon>
     </Compile>
+    <Compile Include="Controls\Settings\Api\ApiSettingsViewModel.cs" />
     <Compile Include="Controls\Settings\DesignModeWarehouseListViewModel.cs" />
     <Compile Include="Controls\Settings\DesignModeWarehouseSettingsViewModel.cs" />
     <Compile Include="Controls\Settings\WarehouseListDialog.xaml.cs">
