--- a/Code/ShipWorks/ShipWorks.Core.csproj
+++ b/Code/ShipWorks/ShipWorks.Core.csproj
@@ -11129,6 +11129,7 @@
     <Content Include="Resources\data_time.png" />
     <Content Include="Resources\data_time_16.png" />
     <Content Include="Resources\data_unknown_16.png" />
+    <Resource Include="Resources\element_into.png" />
     <Content Include="Resources\info.png" />
     <Resource Include="Resources\info_20x20.png" />
     <Content Include="Resources\merge_icon_16x16.png" />
