TP #39285: Add Auto Update Settings check before performing upgrade

--- a/Code/ShipWorks.Escalator/ShipWorks.Escalator.csproj
+++ b/Code/ShipWorks.Escalator/ShipWorks.Escalator.csproj
@@ -53,6 +53,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Interapptive.Shared\Interapptive.Shared.csproj" />
+    <ProjectReference Include="..\ShipWorks\ShipWorks.Core.csproj" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System.Configuration.Install" />
