--- a/Code/ShipWorks/ShipWorks.Core.csproj
+++ b/Code/ShipWorks/ShipWorks.Core.csproj
@@ -869,12 +869,15 @@
     <Compile Include="ApplicationCore\Licensing\Warehouse\HubApiException.cs" />
     <Compile Include="ApplicationCore\Licensing\Warehouse\HubErrorCode.cs" />
     <Compile Include="ApplicationCore\Licensing\Warehouse\HubShipmentLogger.cs" />
+    <Compile Include="ApplicationCore\Licensing\Warehouse\IDefaultWarehouseCreator.cs" />
     <Compile Include="ApplicationCore\Licensing\Warehouse\IHubShipmentLogger.cs" />
+    <Compile Include="ApplicationCore\Licensing\Warehouse\IWarehouseCreate.cs" />
     <Compile Include="ApplicationCore\Licensing\Warehouse\IWarehouseLink.cs" />
     <Compile Include="ApplicationCore\Licensing\Warehouse\IWarehouseList.cs" />
     <Compile Include="ApplicationCore\Licensing\Warehouse\IWarehouseRefreshToken.cs" />
     <Compile Include="ApplicationCore\Licensing\Warehouse\IWarehouseRemoteLoginWithToken.cs" />
     <Compile Include="ApplicationCore\Licensing\Warehouse\IWarehouseRequestClient.cs" />
+    <Compile Include="ApplicationCore\Licensing\Warehouse\WarehouseCreate.cs" />
     <Compile Include="ApplicationCore\Licensing\Warehouse\WarehouseRequestClient.cs" />
     <Compile Include="ApplicationCore\Licensing\Warehouse\WarehouseEndpoints.cs" />
     <Compile Include="ApplicationCore\Licensing\Warehouse\WarehouseLink.cs" />
