TP#39601: Create IDefaultWarehouseCreator

--- a/Code/ShipWorks/ShipWorks.Core.csproj
+++ b/Code/ShipWorks/ShipWorks.Core.csproj
@@ -895,6 +895,8 @@
     <Compile Include="ApplicationCore\Settings\Api\IApiSettingsPage.cs" />
     <Compile Include="ApplicationCore\Settings\AutoUpdateSettings.cs" />
     <Compile Include="ApplicationCore\Settings\ISettingsPage.cs" />
+    <Compile Include="ApplicationCore\Settings\Warehouse\DefaultWarehouseCreator.cs" />
+    <Compile Include="ApplicationCore\Settings\Warehouse\IDefaultWarehouseCreator.cs" />
     <Compile Include="ApplicationCore\Settings\Warehouse\IWarehouseListDialog.cs" />
     <Compile Include="ApplicationCore\Settings\Warehouse\IWarehouseListViewModel.cs" />
     <Compile Include="ApplicationCore\Settings\Warehouse\IWarehouseSettings.cs" />
