--- a/Code/ShipWorks.Tests/ShipWorks.Tests.csproj
+++ b/Code/ShipWorks.Tests/ShipWorks.Tests.csproj
@@ -297,6 +297,7 @@
     <Compile Include="ApplicationCore\Licensing\LicenseEnforcement\ExceedingShipmentLimitEnforcerTest.cs" />
     <Compile Include="ApplicationCore\Licensing\LicenseServiceTest.cs" />
     <Compile Include="ApplicationCore\Licensing\StoreLicenseTest.cs" />
+    <Compile Include="ApplicationCore\Licensing\Warehouse\DefaultWarehouseCreatorTest.cs" />
     <Compile Include="ApplicationCore\Nudges\NudgeDeserializerTest.cs" />
     <Compile Include="ApplicationCore\Nudges\NudgeOptionDeserializerTest.cs" />
     <Compile Include="ApplicationCore\Nudges\NudgeOptionTest.cs" />
