TP#39601:Refactored request creation into its own class to make unit testing better. Added lots of tests

--- a/Code/ShipWorks.Tests/ShipWorks.Tests.csproj
+++ b/Code/ShipWorks.Tests/ShipWorks.Tests.csproj
@@ -298,6 +298,8 @@
     <Compile Include="ApplicationCore\Licensing\LicenseServiceTest.cs" />
     <Compile Include="ApplicationCore\Licensing\StoreLicenseTest.cs" />
     <Compile Include="ApplicationCore\Licensing\Warehouse\DefaultWarehouseCreatorTest.cs" />
+    <Compile Include="ApplicationCore\Licensing\Warehouse\WarehouseRequestFactoryTest.cs" />
+    <Compile Include="ApplicationCore\Licensing\Warehouse\WarehouseCreateTest.cs" />
     <Compile Include="ApplicationCore\Nudges\NudgeDeserializerTest.cs" />
     <Compile Include="ApplicationCore\Nudges\NudgeOptionDeserializerTest.cs" />
     <Compile Include="ApplicationCore\Nudges\NudgeOptionTest.cs" />
