--- a/Code/ShipWorks/ShipWorks.Core.csproj
+++ b/Code/ShipWorks/ShipWorks.Core.csproj
@@ -1529,6 +1529,8 @@
     <Compile Include="Stores\Platforms\Odbc\Mapping\IOdbcStoreRepository.cs" />
     <Compile Include="Stores\Platforms\Rakuten\IRakutenStoreSetupControlViewModel.cs" />
     <Compile Include="Stores\Platforms\Rakuten\OnlineUpdating\IRakutenOnlineUpdater.cs" />
+    <Compile Include="Stores\Platforms\Shopify\DTOs\ShopifyResponse.cs" />
+    <Compile Include="Stores\Platforms\Shopify\DTOs\ShopifyWebClientGetOrdersResult.cs" />
     <Compile Include="Stores\Warehouse\StoreData\OdbcStore.cs" />
     <Compile Include="UI\BackgroundAsyncMessageHelper.cs" />
     <Compile Include="UI\Controls\IScanPack.cs" />
