--- a/Code/ShipWorks/ShipWorks.Core.csproj
+++ b/Code/ShipWorks/ShipWorks.Core.csproj
@@ -1539,6 +1539,7 @@
     <Compile Include="Stores\Platforms\Shopify\DTOs\ShopifyResponse.cs" />
     <Compile Include="Stores\Platforms\Shopify\DTOs\ShopifyWebClientGetOrdersResult.cs" />
     <Compile Include="Stores\Warehouse\StoreData\OdbcStore.cs" />
+    <Compile Include="Templates\Distribution\BuiltinTemplatesWrapper.cs" />
     <Compile Include="UI\BackgroundAsyncMessageHelper.cs" />
     <Compile Include="UI\Controls\IScanPack.cs" />
     <Compile Include="UI\Controls\SandRibbon\IButtonTelemetry.cs" />
